# Robot-719E

./: Cargo.toml  rust-toolchain.toml
.github/: build.yaml
src/: autonomous.rs  chassis.rs  command.rs  image_gen.rs  main.rs  mappings.rs  odometry.rs  pid.rs  pose.rs  vector.rs
src/autonomous/: command.rs  execute.rs  mod.rs  parse.rs
src/autonomous/paths/: Goal Rush.botpath  Left (mess up).botpath  Left.botpath  Right.botpath  Skills.botpath
src/backend/: canvas.rs  mod.rs  reverse.rs
src/subsystems/: drivetrain.rs  intake.rs  lady_brown.rs  mod.rs
ui/: main.slint
