[package]
name = "Robot-719E"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
name = "719E Limbo"
icon = "cool-x"
compress = true

[dependencies]
slint = { version = "1.9.2", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
# vexide = "0.6.1"
vexide = { version = "0.6.1", features = ["slint"] }
# evian = "0.3.0-beta.2"
# evian = { git = "https://github.com/vexide/evian.git" }
evian = { path = "../evian" }

[build-dependencies]
slint-build = "1.9.2"
