[package]
name = "Robot-719E"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
name = "719E Limbo"
icon = "cool-x"
compress = true

[features]
gui = []

[dependencies]
slint = { version = "1.9.2", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
vexide = "0.7.0"
evian = "0.3.0-rc.1"
vexide-slint = "0.1.0"

[build-dependencies]
slint-build = "1.9.2"
